--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "filament/filament": "^2.16",
+        "filament/filament": "^3.0",
         "illuminate/contracts": "^9.0",
         "ryangjchandler/laravel-feature-flags": "^1.0",
         "spatie/laravel-package-tools": "^1.9.2"
@@ -33,7 +33,7 @@
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-ray": "^1.26",
-        "filament/support": "^2.12"
+        "filament/support": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -52,7 +52,11 @@
         "test-coverage": "vendor/bin/pest coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
     },
     "extra": {
         "laravel": {
